Switch to Phaser
Updated to use Phaser

--- a/dw.html
+++ b/dw.html
@@ -2,332 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>Title Screen</title>
-		<script src="js/timer.js" charset="utf-8"></script>
-		<script src="js/sprite.js" charset="utf-8"></script>
-		<script>
-			var Keys = {
-				getDown: [],
-		    	UP: 38,
-		    	DOWN: 40,
-		    	LEFT: 37,
-		    	RIGHT: 39,
-		    	C: 67
-		    }
-
-			window.onload = function () {
-				var canvas = document.getElementById('myCanvas');
-				var c = canvas.getContext('2d');
-
-				var State = {
-					_current: 0,
-					INTRO: 0,
-					LOADING: 1,
-					LOADED: 2
-				}
-
-				window.addEventListener('click', handleClick, false);
-				window.addEventListener('resize', doResize, false);
-
-				// Initialize our sprite array
-				var spritesheet = ['images/dw.png'];
-				var currentHero = 0;
-
-				// Preload the sprite images
-				for (var i = 0; i < spritesheet.src; i++) {
-					var i = new Image();
-					i.src = spritesheet[i];
-				}
-
-				var hero = new Sprite(spritesheet[currentHero], 32, 32, 0, 128, 4, 0);
-
-				var timer = new Timer();
-				var Speed = {
-					x: 0,
-					y: 0,
-					MAX: 2.5
-				}
-				var Position = {
-					x: 130,
-					y: 130
-				}
-
-				doResize();
-
-				function handleClick() {
-					window.removeEventListener('click', handleClick, false);
-					State._current = State.LOADING;
-					fadeToWhite();
-				}
-
-				function doResize() {
-					canvas.width = document.body.clientWidth;
-					canvas.height = document.body.clientHeight;
-
-					switch (State._current) {
-						case State.INTRO:
-							showIntro ();
-							break;
-					}
-				}
-
-			    function handleKeyDown(e) {
-			    	switch (e.keyCode) {
-			    		case Keys.LEFT:
-		                    if (!inArray(Keys.RIGHT, Keys.getDown) && !inArray(Keys.LEFT, Keys.getDown)) {
-		                        Keys.getDown.push(Keys.LEFT);
-		                    }
-		                    break;
-		               case Keys.RIGHT:
-		                    if (!inArray(Keys.LEFT, Keys.getDown) && !inArray(Keys.RIGHT, Keys.getDown)) {
-		                        Keys.getDown.push(Keys.RIGHT);
-		                    }
-		                    break;
-		                case Keys.UP:
-		                    if (!inArray(Keys.UP, Keys.getDown) && !inArray(Keys.DOWN, Keys.getDown)) {
-		                        Keys.getDown.push(Keys.UP);
-		                    }
-		                    break;
-		                case Keys.DOWN:
-		                    if (!inArray(Keys.DOWN, Keys.getDown) && !inArray(Keys.UP, Keys.getDown)) {
-		                        Keys.getDown.push(Keys.DOWN);
-		                    }
-		                    break;
-			    	}
-			    }
-
-				function fadeToWhite(alphaVal) {
-					// If the function hasn't received any parameters, start with 0.02
-					var alphaVal = (alphaVal == undefined) ? 0.02 : parseFloat(alphaVal) + 0.02;
-
-					// Set the color to white
-					c.fillStyle = '#FFFFFF';
-					// Set the Global Alpha
-					c.globalAlpha = alphaVal;
-
-					// Make a rectangle as big as the canvas
-					c.fillRect(0, 0, canvas.width, canvas.height);
-
-					if (alphaVal < 1.0) {
-						setTimeout(function() {
-							fadeToWhite(alphaVal);
-						}, 30);
-					} else {
-						State._current = State.LOADED;
-						draw(timer.getSeconds());
-
-						window.addEventListener('keydown', handleKeyDown, false);
-						window.addEventListener('keyup', handleKeyUp, false);
-					}
-				}
-
-				function showIntro () {
-					var phrase = "Click or tap the screen to start the game";
-
-					// Clear the canvas
-					c.clearRect (0, 0, canvas.width, canvas.height);
-
-					// Make a nice blue gradient
-					var grd = c.createLinearGradient(0, canvas.height, canvas.width, 0);
-					grd.addColorStop(0, '#ceefff');
-					grd.addColorStop(1, '#52bcff');
-
-					c.fillStyle = grd;
-					c.fillRect(0, 0, canvas.width, canvas.height);
-
-					var logoImg = new Image();
-					logoImg.src = 'images/title.png';
-
-					// Store the original width value so that we can keep the same width/height ratio later
-					var originalWidth = logoImg.width;
-
-					// Compute the new width and height values
-					logoImg.width = Math.round((50 * document.body.clientWidth) / 100);
-					logoImg.height = Math.round((logoImg.width * logoImg.height) / originalWidth);
-
-					// Create an small utility object
-					var logo = {
-						img: logoImg,
-						x: (canvas.width/2) - (logoImg.width/2),
-						y: (canvas.height/2) - (logoImg.height/2)
-					}
-
-					// Present the image
-					c.drawImage(logo.img, logo.x, logo.y, logo.img.width, logo.img.height);
-
-					// Change the color to black
-					c.fillStyle = '#000000';
-					c.font = 'bold 16px Arial, sans-serif';
-
-					var textSize = c.measureText (phrase);
-					var xCoord = (canvas.width / 2) - (textSize.width / 2);
-
-					c.fillText (phrase, xCoord, (logo.y + logo.img.height) + 50);
-				}
-
-			    function handleKeyUp(e) {
-			    	switch (e.keyCode) {
-			    		case Keys.C:
-			    			if (currentHero === (spritesheet.length - 1)) {
-			    				currentHero = 0;
-			    			} else {
-			    				currentHero++;
-			    			}
-
-			    			hero.setSpritesheet(spritesheet[currentHero]);
-			    			break;
-			    		case Keys.LEFT:
-			    		case Keys.RIGHT:
-			    		case Keys.UP:
-			    		case Keys.DOWN:
-		                    Keys.getDown = removeFromArray(e.keyCode, Keys.getDown);
-		                    break;
-			    	}
-			    }
-
-			    function inArray(element, arr) {
-				    for (var i = 0; i < arr.length; i++) {
-				        if (arr[i] === element) {
-				            return true;
-				        }
-				    }
-				    return false;
-				}
-
-				function removeFromArray(element, arr) {
-				    for (var i = 0; i < arr.length; i++) {
-				        if (arr[i] == element)
-				            arr.splice(i, 1);
-				    }
-
-				    return arr;
-				}
-
-				function calculateSpriteOffset(x, y) {
-					if (x === 0 && y === 0) { // standing still
-						hero.setOffset(0, 128);
-						hero.setFrames(1);
-						hero.setDuration(0);
-					} else if (x > 0 && y === 0) { // East
-						if (hero.offsetY !== 192) {
-							hero.setOffset(0, 192);
-							hero.setFrames(6);
-							hero.setDuration(500);
-						}
-					} else if (x < 0 && y === 0) { // West
-						if (hero.offsetY !== 224) {
-							hero.setOffset(0, 224);
-							hero.setFrames(6);
-							hero.setDuration(500);
-						}
-					} else if (x === 0 && y > 0) { // South
-						if (hero.offsetY !== 128 || hero.frames !== 4) {
-							hero.setOffset(0, 128);
-							hero.setFrames(4);
-							hero.setDuration(500);
-						}
-					} else if (x === 0 && y < 0) { // North
-						if (hero.offsetY !== 160) {
-							hero.setOffset(0, 160);
-							hero.setFrames(4);
-							hero.setDuration(500);
-						}
-					} else if (x > 0 && y < 0) { // North East
-						if (hero.offsetY !== 0) {
-							hero.setOffset(0, 0);
-							hero.setFrames(4);
-							hero.setDuration(500);
-						}
-					} else if (x > 0 && y > 0) { // South East
-						if (hero.offsetY !== 32) {
-							hero.setOffset(0, 32);
-							hero.setFrames(4);
-							hero.setDuration(500);
-						}
-					} else if (x < 0 && y < 0) { // North West
-						if (hero.offsetY !== 64) {
-							hero.setOffset(0, 64);
-							hero.setFrames(4);
-							hero.setDuration(500);
-						}
-					} else if (x < 0 && y > 0) { // South West
-						if (hero.offsetY !== 96) {
-							hero.setOffset(0, 96);
-							hero.setFrames(4);
-							hero.setDuration(500);
-						}
-					}
-				}
-
-				function draw (timeStamp) {
-					timer.update();
-
-					c.fillStyle = '#FFFFFF';
-					c.fillRect (0, 0, canvas.width, canvas.height);
-
-					c.fillStyle = '#000000';
-					c.font = '12px Arial, Sans-serif';
-					c.fillText ("Use the UP, DOWN, LEFT and RIGHT keys to move", 10, 20);
-
-					// Calculate X speed
-					if (inArray(Keys.RIGHT, Keys.getDown)) {
-				    	Speed.x = Speed.MAX;
-				    	Speed.y = 0;
-				    } else if (inArray(Keys.LEFT, Keys.getDown)) {
-				    	Speed.x = Speed.MAX * -1;
-				    	Speed.y = 0;
-				    } else {
-				        // No right / left keys are being pressed
-				    	Speed.x = 0
-				    }
-
-				    // Calculate Y speed
-				    if (inArray(Keys.DOWN, Keys.getDown)) {
-				    	Speed.y = Speed.MAX;
-				    	Speed.x = 0;
-				    } else if (inArray(Keys.UP, Keys.getDown)) {
-				    	Speed.y = Speed.MAX * -1;
-				    	Speed.x = 0;
-				    } else {
-				        // No up / down keys are being pressed
-				        Speed.y = 0
-				    }
-
-				    // Change the X/Y offset of the spritesheet and the "speed" of the animation depending on X/Y speed
-				    calculateSpriteOffset(Speed.x, Speed.y);
-
-				    // Make sure to restraint the character to move inside the canvas
-				    if ((Position.x + Speed.x) > 0 && (Position.x + Speed.x) < (canvas.width - hero.width)) {
-				    	Position.x += Speed.x;
-					}
-
-					if ((Position.y + Speed.y) > 0 && (Position.y + Speed.y) < (canvas.height - hero.height)) {
-				    	Position.y += Speed.y;
-					}
-
-					hero.setPosition(Position.x, Position.y);
-					hero.animate(c, timer);
-					hero.draw(c);
-
-					setTimeout(function() {
-						draw(timer.getSeconds());
-					}, 5);
-				}
-			}
-		</script>
-		<style type="text/css" media="screen">
-			html { height: 100%; overflow: hidden }
-			body {
-				margin: 0px;
-				padding: 0px;
-				height: 100%;
-			}
-		</style>
-
+		<title>DragonWarrior</title>
+		<script type="text/javascript" src="js/phaser.2.2.1.min.js"></script>
+		<script type="text/javascript" src="js/dw.js"></script>
     </head>
     <body>
-		<canvas id="myCanvas" width="100" height="100">
-			Your browser doesn't include support for the canvas tag.
-		</canvas>
     </body>
 </html>
