--- a/dw.html
+++ b/dw.html
@@ -7,5 +7,6 @@
 		<script type="text/javascript" src="js/dw.js"></script>
     </head>
     <body>
+    <div id="dw" align="center"></div>
     </body>
 </html>
